013 CSS - Grid Layout With Image Span/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: #333;
  color: #fff;
  font-family: 'Roboto', sans-serif;
}

h2 {
    font-size: 45px;
    font-weight: 300;
    margin: 10px;
}

h2 span {
    font-size: 30px;
}

p {
    font-size: 20px;
}

.grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 10px;
}

.grid > div {
    height: 210px;
    background-size: cover;
    background-attachment: fixed;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: all 0.5s ease-in;
}

.grid > div:hover {
    opacity: 0.7;
    /* Transform with background-attachment: fixed; only works properly in Chrome currently */
    /* transform: scale(0.98); */
    margin: 3px;
    height: calc(100% - 6px);
}

.grid > div:nth-of-type(1) {
    grid-column: 1 / 3;
}
.grid > div:nth-of-type(6) {
    grid-column: 3 / 5;
}
.grid > div:nth-of-type(9) {
    grid-column: 3 / 5;
}
.grid > div:nth-of-type(10) {
    grid-column: 1 / 3;
}

.bg1 {
    background: url("img/bg1.jpg");
}
.bg2 {
    background: url("img/bg2.jpg");
    color: #333;
}

